make sidebar scroll and prevent it from going invisible on low display resolutions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,16 +270,32 @@ header p { color: #d8d8d8; text-shadow: rgba(0, 0, 0, 0.2) 0 1px 0; font-size: 1
 #banner ul li a.button { background-color: #FFE788; }
 #banner #logo { position: absolute; height: 36px; width: 36px; right: 7px; top: 7px; display: block; background: url(../images/octocat-logo.svg); }
 
-section { width: 590px; padding: 30px 30px 50px 30px; margin: 20px 0; margin-top: 190px; position: relative; background: #fbfbfb; border-radius: 3px; border: 1px solid #cbcbcb; box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4); }
+section { 
+  width: 590px; 
+  padding: 30px 30px 50px 30px;
+  margin: 20px 0; 
+  margin-top: 190px; 
+  position: relative;
+  background: #fbfbfb; 
+  border-radius: 3px; 
+  border: 1px solid #cbcbcb;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4); 
+}
 
 small { font-size: 12px; }
 
-nav { width: 230px; position: fixed; top: 220px; left: 50%; margin-left: -580px; text-align: right; }
+nav { 
+  width: 230px; 
+  position: relative; 
+  left: 50%;
+  margin-left: -580px;
+  text-align: right;
+  float: left;
+}
 nav ul { list-style: none; list-style-image: none; font-size: 14px; line-height: 24px; }
 nav ul li { padding: 5px 0px; line-height: 16px; }
 nav ul li.tag-h1 { font-size: 1.2em; }
 nav ul li.tag-h1 a { font-weight: bold; color: #333; }
-nav ul li.tag-h1 a:hover { color: #666; }
 nav ul li.tag-h2 + .tag-h1 { margin-top: 10px; }
 nav ul a { color: #666; }
 nav ul a:hover { color: #999; }
@@ -287,13 +303,27 @@ nav ul a:hover { color: #999; }
 footer { width: 180px; position: fixed; left: 50%; margin-left: -530px; bottom: 20px; text-align: right; line-height: 16px; }
 
 @media print, screen and (max-width: 1060px) { div.wrapper { width: auto; margin: 0; }
-  nav { display: none; }
+  nav {
+    margin: 190px auto 20px; 
+    left: 0%;
+    float: none;
+    text-align: center;
+    width: 590px;
+    max-width: 600px;
+  }
   header, section, footer { float: none; }
   header h1, section h1, footer h1 { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; -o-text-overflow: ellipsis; -ms-text-overflow: ellipsis; }
   #banner { width: 100%; }
   #banner .downloads { margin-right: 60px; }
   #banner #logo { margin-right: 15px; }
-  section { border: 1px solid #e5e5e5; border-width: 1px 0; padding: 20px 0; margin: 190px auto 20px; max-width: 600px; }
+  section {
+    border: 1px solid #e5e5e5; 
+    border-width: 1px 0; 
+    padding: 20px 20px;
+    margin: 190px auto 20px; 
+    margin-top: 0px;
+    max-width: 600px;
+  }
   footer { text-align: center; margin: 20px auto; position: relative; left: auto; bottom: auto; width: auto; } }
 @media print, screen and (max-width: 720px) { body { word-wrap: break-word; }
   header { padding: 20px 20px; margin: 0; }
@@ -301,14 +331,22 @@ footer { width: 180px; position: fixed; left: 50%; margin-left: -530px; bottom: 
   header p { display: none; }
   #banner { top: 80px; }
   #banner .fork { float: left; display: inline-block; margin-left: 0px; position: fixed; left: 20px; }
-  section { margin-top: 130px; margin-bottom: 0px; width: auto; }
+  nav {
+    margin-top: 130px;
+    margin-bottom: 0px;
+    width: auto;
+  }
+  section { margin-top: 0px; margin-bottom: 0px; width: auto; }
   header ul, header p.view { position: static; } }
 @media print, screen and (max-width: 480px) { header { position: relative; padding: 5px 0px; min-height: 0px; }
   header h1 { font-size: 24px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; -o-text-overflow: ellipsis; -ms-text-overflow: ellipsis; }
-  section { margin-top: 5px; }
+  nav {
+    margin-top: 5px;
+  }
+  section { margin-top: 0px; }
   #banner { display: none; }
   header ul { display: none; } }
 @media print { body { padding: 0.4in; font-size: 12pt; color: #444; } }
 @media print, screen and (max-height: 680px) { footer { text-align: center; margin: 20px auto; position: relative; left: auto; bottom: auto; width: auto; } }
-@media print, screen and (max-height: 480px) { nav { display: none; }
+@media print, screen and (max-height: 480px) {
   footer { text-align: center; margin: 20px auto; position: relative; left: auto; bottom: auto; width: auto; } }
